--- a/jbook/templates/default.html
+++ b/jbook/templates/default.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <title>{{ title }}</title>
+  <title>{{ webbook_title }}</title>
 
   <!-- Bootstrap -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
@@ -24,7 +24,7 @@
 <body>
   <div class="container-fluid">
     <div class="row">
-      <div class="col-sm-2">
+      <div class="col-xs-2">
         <ul id="sidebar" class="nav nav-stacked nav-pills affix col-sm-2">
           <li role="presentation"><a href="#"><strong>{{ webbook_title }}</strong></a></li>
           <hr style="margin-top: 0px">
@@ -34,7 +34,7 @@
         </ul>   
       </div>
 
-      <div class="col-sm-10">
+      <div class="col-xs-10">
 {{ notebook_content }}
       </div>
     </div>
