--- a/jbook/templates/default.html
+++ b/jbook/templates/default.html
@@ -19,31 +19,51 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
       <![endif]-->
-</head>
+    </head>
 
-<body>
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-xs-2">
-        <ul id="sidebar" class="nav nav-stacked nav-pills affix col-sm-2">
-          <li role="presentation"><a href="#"><strong>{{ webbook_title }}</strong></a></li>
-          <hr style="margin-top: 0px">
-          {% for chapter in chapters %}
-          <li role="presentation" class="{{ chapter.class }}"><a href="{{ chapter.href }}">{{ chapter.name }}</a></li>
-          {% endfor %}
-        </ul>   
-      </div>
+    <body>
 
-      <div class="col-xs-10">
-{{ notebook_content }}
-      </div>
-    </div>
-  </div>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script type="text/javascript">
-    $('.prompt').remove();
-  </script>
-</body>
-</html>
+
+
+      <!-- ################## -->
+      <div class="navbar navbar-inverse navbar-fixed-top">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="offcanvas">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">{{ webbook_title }}</a>
+        </div>
+      </div><!--/.navbar -->
+
+      <div class="row-offcanvas row-offcanvas-left">
+        <div id="sidebar" class="sidebar-offcanvas">
+          <div class="col-md-12">
+            <h3>Chapters</h3>
+            <ul class="nav nav-pills nav-stacked">
+              {% for chapter in chapters %}
+              <li class="{{ chapter.class }}"><a href="{{ chapter.href }}">{{ chapter.name }}</a></li>
+              {% endfor %}
+            </ul>
+          </div>
+        </div>
+        <div id="main">
+          <div class="col-md-10 col-md-offset-1">
+            {{ notebook_content }}
+          </div>
+        </div>
+      </div><!--/row-offcanvas -->
+
+
+      <!-- ################ -->
+
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+      <script src="js/custom.js"></script>
+      <script type="text/javascript">
+        $('.prompt').remove();
+      </script>
+    </body>
+    </html>
